--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^0.9.0",
     "foundation-sites": "^6.3.1",
     "fs-extra": "^1.0.0",
@@ -50,7 +51,9 @@
     "gulp-uglify": "^2.1.2",
     "gulp-watch": "^4.3.11",
     "jquery.mmenu": "^5.7.8",
+    "node-sass": "^4.7.2",
     "path": "^0.12.7",
+    "sass-loader": "^6.0.6",
     "vue-loader": "^11.1.4",
     "vue-template-compiler": "^2.2.1",
     "webpack": "^2.2.0",
